force-app/main/default/objects/Lilly_ReferralsSent__c/Lilly_ReferralsSent__c.object-meta.xml
<CustomObject>
    <label>ReferralsSent</label>
    <nameField>
        <label>ReferralsSent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReferralsSents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>