force-app/main/default/objects/Lilly_ReferralsSent__c/fields/Lilly_Count__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Count__c</fullName>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>