force-app/main/default/objects/Lilly_ReferralsSent__c/fields/Lilly_People_Id__c.field-meta.xml
<CustomField>
    <fullName>Lilly_People_Id__c</fullName>
    <label>People Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>