force-app/main/default/objects/Lilly_ReferralsSent__c/fields/Lilly_Service_Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Service_Code_Type__c</fullName>
    <label>Service Code Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>