force-app/main/default/objects/Lilly_ReferralsSent__c/fields/Lilly_Service_description__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Service_description__c</fullName>
    <label>Service description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>