force-app/main/default/objects/Lilly_ReferralsSent__c/fields/Lilly_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Service_Line__c</fullName>
    <label>Service Line</label>
    <length>25</length>
    <type>Text</type>
</CustomField>